Fixed thumbnails getting squished

--- a/_sass/timeline.scss
+++ b/_sass/timeline.scss
@@ -54,10 +54,9 @@
 
   .bubble {
     border-radius: 100%;
-    max-width: 24vw;
-    max-height: 24vw;
-    width: 100%;
-    height: 100%;
+    width: 24vw;
+    height: 24vw;
+
     border: #d33830 solid 6px;
     margin-right: 12px;
 
